AOC2018-2021/src/main/antlr4/nl/njtromp/adventofcode_2018/Day12_2018.g4
grammar Day12_2018;

initial_state: 'initial state: ' pots EOL;
pots: pot+;
pot: '.' | '#';

transformations: transformation+;
transformation: pot pot pot pot pot '=>' newPot EOL;
newPot: '.' | '#';

WHITESPACE: [\r\n ] -> skip;

EOL : [\r\n]+ ;
